# flexEmu

./: Cargo.toml  README.md  README.zh_CN.md  rand
.github/workflows/: check-and-lint.yaml  release-packaging.yaml  test.yaml
contracts/: Move.toml  README.md  dev.key
contracts/bins/: README.md  arith-example
contracts/integration-tests/: empty_test.move  mips_test.exp  mips_test.move  step_59_test.exp  step_59_test.move  table_test.move
contracts/release/: contracts.v0.0.0.blob
contracts/sources/: challenge_script.move  chanllenge.move  jellyfish_merkle_tree.move  memory.move  mips.move  mips_emulator.move  simple_challenge.move
contracts/step-58/: step-proof.json
contracts/step-59/: step-proof.json
crates/ethtrie-codec/: Cargo.toml
crates/ethtrie-codec/src/: lib.rs
docs/: background.md  background_of_layer2.md  challenge.md  components.md  guidelines.md  intro-to-omo-part1.zh.md  overview.md  proof_of_fraud.md  prototype_of_cannon_in_move.zh.md
docs/ch/: challenge.md  components.md  overview.md  proof_of_fraud.md
docs/dev/: apple_silicon.md
flexemu/: Cargo.toml
flexemu-workflow/: Cargo.toml  README.md  defender-0x72d8f07846f8fc7efc742921310124b3.key  demo_init.sh
flexemu-workflow/src/: lib.rs  main.rs  move_resources.rs
flexemu/src/: emulator.rs  main.rs  stack.rs  utils.rs
flexemu/src/arch/: mod.rs
flexemu/src/config/: mod.rs
flexemu/src/os/: README.md  mod.rs
flexemu/src/os/linux/: mod.rs
mips-runner/: Cargo.toml  README.md  config.toml.example
mips-runner/src/: arch.rs  emulator.rs  errors.rs  lib.rs  main.rs  memory.rs  os.rs  registers.rs  utils.rs
mips-runner/src/cc/: mod.rs
mips-runner/src/config/: mod.rs
mips-runner/src/data/: mod.rs
mips-runner/src/loader/: mod.rs
omo/: Cargo.toml  README.md
omo-workflow/: Cargo.toml  README.md  challenger-0x613bcd14c23d993d3f751b218510a009.key
omo-workflow/src/: lib.rs  main.rs  move_resources.rs  txn_builder.rs
omo/src/: arch.rs  core.rs  emulator.rs  engine.rs  errors.rs  file.rs  lib.rs  main.rs  memory.rs  os.rs  rand.rs  registers.rs  stack.rs  step_proof.rs  syscall.rs  utils.rs
omo/src/arch/: mips.rs  mod.rs
omo/src/cc/: mod.rs
omo/src/config/: mod.rs
omo/src/data/: mod.rs
omo/src/loader/: mod.rs
omo/src/os/: mod.rs
omo/src/os/linux/: file.rs  mod.rs  syscall.rs  syscall_table.json
rust-mips-example/: Cargo.toml  Cross.toml  README.md
rust-mips-example/.cargo/: config.toml
rust-mips-example/src/: arith_example.rs  main.rs  mips_example.rs
