[package]
name = "omo-workflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
omo = {path = "../omo"}
serde = "~1"
serde_json = "~1"
starcoin-crypto = { git = "https://github.com/starcoinorg/starcoin-crypto", rev = "d871dfb4216f034ee334a575926c101574d9d6dc" }
starcoin-types = {git = "https://github.com/starcoinorg/starcoin"}
starcoin-vm-types = {git = "https://github.com/starcoinorg/starcoin"}
starcoin-rpc-client = { git = "https://github.com/starcoinorg/starcoin" }
starcoin-rpc-api = { git = "https://github.com/starcoinorg/starcoin"}
#starcoin-logger = { git = "https://github.com/starcoinorg/starcoin" }
bcs-ext = { git = "https://github.com/starcoinorg/starcoin" }
jsonrpc-core-client = "18"
tokio = { version = "^1", features = ["full"] }
futures-util = "~0.3"
futures-retry = "0.6"
clap = { version = "3", features=["derive"] }
anyhow = "1"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.10"
toml = "0.5"