[package]
name = "omo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.57" }
clap = { version = "3.1.18", features = ["derive"] }
goblin = { version = "0.5.1" }
unicorn-engine = { version = "2.0.0" }
bytes = { version = "1.1.0" }
byteorder = { version = "1.4.3" }
thiserror = { version = "1.0.31" }
lazy_static = { version = "1.4.0" }
strum = { version = "0.24", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
toml = { version = "0.5.9" }
map-macro = { version = "0.2.2" }
maplit = { version = "1" }
log = { version = "0.4.17" }
env_logger = { version = "0.9.0" }
num-traits = { version = "0.2.15" }
#xmas-elf = { version = "0.8.0" }
hex = { version = "0.4.3", features=["serde"] }

trie-db = { version = "0.24" }
#keccak-hasher = { version = "0.15" }
memory-db = { version = "0.30" }

ethtrie-codec = {path="../crates/ethtrie-codec"}
rlp = { version = "0.5.1" }
hex-buffer-serde = { version = "0.3.0" }