[package]
name = "rust-mips-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "arith-example"
path = "src/arith_example.rs"

[[bin]]
name = "rust-mips-example"
path  = "src/mips_example.rs"