[package]
name = "ethtrie-codec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trie-db = { version = "0.24" }
keccak-hasher = { version = "0.15" }
rlp = { version = "0.5.1" }

[dev-dependencies]
memory-db = { version = "0.30" }
hex-literal = { version = "0.3.4" }
